# FactorioQCalc

./: .gitignore  DOC.MD  SPEC.MD  pyproject.toml
core/: calculator.py  data.py
tests/: test_calculator.py
ui/: assets.py  main_window.py  style.py
ui/widgets/: module_row.py  module_slot.py  panel.py
