[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "factorio-quality-calculator"
version = "1.0.0"
description = "Factorio Quality Calculator"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5,<7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
